--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
         "wa-sticker-formatter": "^4.3.2",
         "xfarr-api": "^1.0.3",
         "yargs": "^17.2.1",
-        "yt-search": "^2.10.2",
+        //"yt-search": "^2.10.2",
         "yuzzu-api": "^1.0.2"
     }
 }
